<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFDE7">

    <TextView
        android:text="@string/resumen_de_compra"
        android:textSize="28sp"
        android:textColor="#1B5E20"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="#C8E6C9"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:clipToOutline="true"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txtPedido"
            android:text="@string/aqu_aparecer_tu_pedido"
            android:textSize="20sp"
            android:textColor="#2E7D32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finalizar_pedido"
        android:backgroundTint="#2E7D32"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D32F2F"
        android:padding="10dp"
        android:text="@string/regresar"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

</LinearLayout>